# bwm_claude

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  setup.cfg  setup.py
bwm_claude/: hooks (1).py  hooks.py  interunit_transfer.py  modules.txt
bwm_claude/overrides/: work_order.py
bwm_claude/public/js/: work_order.js
