[project]
name = "bwm_claude"
version = "0.0.1"
description = "BWM Claude - Custom overrides and automation for Banaraswala Wire Mesh"
authors = [
    {name = "Banaraswala Wire Mesh P Limited", email = "vishal@banaraswala.com"}
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
